[package]
name = "rschat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = "0.26"
bcrypt = "0.9"
time = "0.3.31"
thetime = "0.1.1"
percent-encoding = "2.3.1"